Refactor: Prefix api with v1
- Prepend  all the imports and routes with v1

--- a/limbook_api/templates/layout.html
+++ b/limbook_api/templates/layout.html
@@ -23,7 +23,7 @@
 <header class="site-header">
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
         <div class="container">
-            <a class="navbar-brand" href="{{ url_for('main.home') }}">Limbook Api</a>
+            <a class="navbar-brand" href="{{ url_for('home') }}">Limbook Api</a>
         </div>
     </nav>
 </header>
