Update home template
- Add description
- Add link to documentation
- Add link to github repository

--- a/limbook_api/templates/home.html
+++ b/limbook_api/templates/home.html
@@ -4,6 +4,10 @@
     <div class="section text-center">
         <img class="rounded-circle article-img" src="{{ url_for('static', filename='logo.png') }}" alt="Limbook api logo">
         <h1>Welcome to Limbook Api</h1>
-        <p>I cannot do much if you visit me directly. Please, visit me through my api end points.</p>
+        <p>Limbook Api is a minimal api for creating social app like facebook or
+            twitter. It has basic features like user, role and permission management
+            plus support for posts, comments, react and friends. </p>
+        <h2><a href="https://documenter.getpostman.com/view/3230491/SzmmVueg" target="_blank">Documentation</a></h2>
+        <h2><a href="https://github.com/limvus/limbook-api" target="_blank">Github Repo</a></h2>
     </div>
 {% endblock content%}
