Chore: Bump version to 1.1.2

--- a/limbook_api/templates/home.html
+++ b/limbook_api/templates/home.html
@@ -3,7 +3,7 @@
 {% block content %}
     <div class="section text-center">
         <img class="rounded-circle article-img" src="{{ url_for('static', filename='logo.png') }}" alt="Limbook api logo">
-        <h1>Welcome to Limbook Api</h1>
+        <h1>Welcome to Limbook Api: 1.1.2</h1>
         <p>Limbook Api is a minimal api for creating social app like facebook or
             twitter. It has basic features like user, role and permission management
             plus support for posts, comments, react and friends. </p>
